GNOME Bugzilla – Bug 655381
GstBitReader and GstByteReader functions missing out argument annotations
Last modified: 2011-07-27 09:15:43 UTC
The val arguments for gst_{bit,byte}_reader* are missing the GObject introspection (out) annotation.
Created attachment 192731 [details] [review] add missing (out) annotation for byte reader/writer functions
Pushed, thanks for the patch! commit cf6b41aa78143d715f0ec398640aa600a59ed42a Author: Evan Nemerson <evan@coeus-group.com> Date: Tue Jul 26 22:41:59 2011 -0700 base: add missing (out) annotation for byte reader/writer functions https://bugzilla.gnome.org/show_bug.cgi?id=655381