base: add missing (out) annotation for byte reader/writer functions

https://bugzilla.gnome.org/show_bug.cgi?id=655381